[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/HUD/Interface.gd" type="Script" id=1]
[ext_resource path="res://assets/HUD/backlabel.png" type="Texture" id=2]
[ext_resource path="res://scenes/HUD/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD/Counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD/Pause.tscn" type="PackedScene" id=5]

[node name="Interface" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="NavBar" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="HealthBar" parent="." index="1" instance=ExtResource( 3 )]

[node name="Counter" parent="." index="2" instance=ExtResource( 4 )]

anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_right = 65.0

[node name="Pause" parent="." index="3" instance=ExtResource( 5 )]

anchor_left = 1.0
anchor_right = 1.0
margin_left = -93.0
margin_right = 0.0

[connection signal="health_updated" from="." to="HealthBar" method="_on_Interface_health_updated"]

[connection signal="score_updated" from="." to="Counter" method="_on_Interface_score_updated"]


